examples/errors/identification/duplicated_var_declaration.xana
a, a :: int
a :: int

b, a :: char

def main() do
    a :: double
end